# login_website_crawl

./: BUILD.bazel  Cargo.toml  README.md  WORKSPACE
public/: login.html
src/: analysis.rs  config.rs  crawler.rs  database.rs  export.rs  filter.rs  login.rs  main.rs  monitor.rs  report.rs  rules.rs  scheduler.rs  validation.rs  web_server.rs
tests/: comprehensive_test.rs  integration_test.rs
web/: index.html
