[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = "1.29.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
log = "0.4"
env_logger = "0.11"
warp = "0.3"
csv = "1.1"
chrono = "0.4"
cron = "0.8"
regex = "1.5"

[dev-dependencies]
tokio-test = "0.4"